--- a/styles.css
+++ b/styles.css
@@ -361,3 +361,122 @@ margin: 8px 0;}
   background-color: white;
 
 }
+
+/*Shop Cart*/
+
+.top-shop-container h3 {
+  overflow:hidden ;
+  text-align: center;
+  
+}
+
+.top-shop-container h3::before, h3::after {
+width: 50%;
+content: "";
+display: inline-block;
+height: 1px;
+position: relative;
+vertical-align: middle;
+background-color: black;
+}
+
+h3:before {
+  right: 0.5em;
+  margin-left: -50%;
+}
+
+h3:after {
+  left: 0.5em;
+  margin-right: -50%;
+}
+.top-shop-container h3 span{
+  padding: 0 10px;
+  color: white;
+}
+
+
+
+
+
+
+
+
+
+.top-shop-container h4 {
+  overflow:hidden ;
+  text-align: center;
+  
+}
+
+.top-shop-container2 h3::before, h4::after {
+width: 100%;
+content: "";
+display: inline-block;
+height: 1px;
+position: relative;
+vertical-align: middle;
+background-color: black;
+}
+
+h4:before {
+  right: 0.5em;
+  margin-left: -50%;
+}
+
+h4:after {
+  left: 0.5em;
+  margin-right: -50%;
+}
+.top-shop-container h4 span{
+  padding: 0 10px;
+  color: white;
+}
+
+.chuck-table {
+  width: 2000;
+}
+
+th, td {
+  padding: 10px;
+  text-align: left;
+}
+
+
+.footer-container2 {
+  display: flex;
+  position: fixed;
+  justify-content: space-between;
+  display: flex;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 20%;
+  background-color: rgba(212, 77, 0, 1);
+  ;
+}
+
+.footer-left2 button {
+  background-color: white;
+  border: none;
+  color: black;
+  padding: 15px 32px;
+  border-radius: 4%;
+}
+
+
+
+.footer-container2 .footer-left2  {
+   
+ 
+  position:absolute; right:0
+}
+
+.foot-co {
+  font-size: xx-small;
+  margin: -10px;
+}
+
+.footer-column  table{
+border-collapse: collapse;
+}
+
